--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# D-Spy 1.2.1
+
+Just a few small UI updates and build system fixes in this release.
+
 # D-Spy 1.2.0
 
 D-Spy 1.2.0 is our initial release to correspond with GNOME 42.0.
