--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+# D-Spy 1.4
+
+This release fixes the project name to match the infrastructure.
+
 # D-Spy 1.2.1
 
 Just a few small UI updates and build system fixes in this release.
