--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# D-Spy 1.8.0 (GNOME 45.0)
+
+ * Fixes to support translations properly
+ * Fixes in introspection path generation
+
 # D-Spy 1.6.0 (GNOME 44.0)
 
 No changes since 1.5.0 (44.beta)
