--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+# D-Spy 1.9.1 (GNOME 46.rc)
+
+ * Translation updates
+ * Appdata and screenshot updates
+ * AdwAboutDialog
+
 # D-Spy 1.9.0 (GNOME 46.alpha)
 
  * Various styling improvements to match GNOME HIG
