--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+# D-Spy 47.0
+
+ * Set legacy icon for window
+ * Translation updates
+
 # D-Spy 47.alpha
 
  * Transition to GNOME release numbering
