--- a/NEWS
+++ b/NEWS
@@ -1,58 +1,5 @@
-# D-Spy 47.0
+# D-Spy 48.beta
 
- * Set legacy icon for window
- * Translation updates
+ * Removal of libdspy. This is no longer used by Builder and will
+   allow future changes to be landed for new designs.
 
-# D-Spy 47.alpha
-
- * Transition to GNOME release numbering
- * Build changes to accomidate bundling from Builder
- * Translation updates
-
-# D-Spy 1.10.0 (GNOME 46.0)
-
- * Translation updates
-
-# D-Spy 1.9.1 (GNOME 46.rc)
-
- * Translation updates
- * Appdata and screenshot updates
- * AdwAboutDialog
-
-# D-Spy 1.9.0 (GNOME 46.alpha)
-
- * Various styling improvements to match GNOME HIG
- * Various tooltips, mnemonics, and shortcuts were added
-
-# D-Spy 1.8.0 (GNOME 45.0)
-
- * Fixes to support translations properly
- * Fixes in introspection path generation
-
-# D-Spy 1.6.0 (GNOME 44.0)
-
-No changes since 1.5.0 (44.beta)
-
-# D-Spy 1.5.0
-
-This is a beta release for GNOME 44.beta.
-
-Changes in this release:
-
- * Use AdwAboutDialog
- * Install appdata into proper metadata directory
- * Add spacing around textviews for properties/methods
- * Sort object-paths, methods, properties, and signals lexicographically
- * Allow creating a new window from the primary menu
-
-# D-Spy 1.4
-
-This release fixes the project name to match the infrastructure.
-
-# D-Spy 1.2.1
-
-Just a few small UI updates and build system fixes in this release.
-
-# D-Spy 1.2.0
-
-D-Spy 1.2.0 is our initial release to correspond with GNOME 42.0.
