--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+# D-Spy 49.rc
+
+ * A new interface design that is more adaptable to exploring
+   complex D-Bus peers as well as working on more constrained
+   display devices.
+
 # D-Spy 48.0
 
  * Translation updates
